# kenken-explorer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  main.rs
src/experiments/: generate.rs  histogram.rs  mod.rs
tests/: determinism.rs
