[package]
name = "kenken-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
kenken = { git = "https://github.com/wpm/KenKen.git" }
rand = "0.10"
rand_chacha = "0.10"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
